Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32324

QDeclarativeContactModel duplicate the contact when receiving a contact update signal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.0
    • 5.1.0 RC2
    • PIM: Contacts
    • None
    • Ic872da1caa9db6faf6f3f1be3fc78df448d92baf

      When contact engine emits the contactsChanged signal the contact appear twice in the model.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            renatofilho renato araujo oliveira filho
            renatofilho renato araujo oliveira filho
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes