Prevent duplicated contacts on QDeclarativeContactModel.

Fixed contact update function to use 'dataChanged' signal insted of 'beginInsertRows' which causes contact duplication.

Task-number: QTBUG-32324
Change-Id: Ic872da1caa9db6faf6f3f1be3fc78df448d92baf
Reviewed-by: Christopher Adams <chris.adams@jollamobile.com>
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>